overflow styles fixed

--- a/src/main.css
+++ b/src/main.css
@@ -7,21 +7,22 @@
 html,
 body {
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .container {
   /* height: 100vh; */
   width: 100vw;
   /* overflow: auto; */
-  margin-top: 3rem;
   margin-left: auto;
   margin-right: auto;
   max-width: 1140px;
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 0 1rem;
+  padding: 3rem 1rem;
+  height: calc(100% - 51px);
+  overflow-y: auto;
 }
 
 h1 {
